src/app/chat-info/chat-info.component.css
.group-image {
  height: 110px;
  width: 110px;
}

.display-image {
  width: 30px;
  border-radius: 50%;
}

@media (min-width: 600px) {
  .group-image {
    height: 200px;
    width: 200px;
  }

  .display-image {
    width: 60px;
    border-radius: 50%;
  }

  .custom-card {
    width: 500px;
  }
}

